src/App.css
/* ... */
.frame-overlay-dark-grey {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 766px;
  height: 846px;
  border: 3px solid hsl(0, 0%, 20%);
  pointer-events: none;
  z-index: 10;
  transform: translate(-50%, -50%);
}

.frame_overlay_dark_grey_buy {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 760px;
  height: 840px;
  border: 3px solid hsl(0, 0%, 20%);
  z-index: 5;
}

.frame-overlay-light-grey {
  position: absolute;
  top: 50%; 
  left: 50%;
  width: 670px;
  height: 740px;
  border: 3px solid hsl(0, 0%, 80%);
  pointer-events: none;
  z-index: 1;
  transform: translate(-50%, -50%);
}

/* FRAME around the image = END */

/* SINGLE IMAGE display = START */

.single_image_display_container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 760px;
  height: 840px;
  z-index: 0;
}

.single_image_display {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.single_image_display img {
  max-width: 100%;
  max-height: 100%;
  object-fit: contain;
}

/* SINGLE IMAGE display = END */

/* overlap boxes START */

.overlap-container {
  display: flex;
  position: absolute;
  align-items: stretch;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
  height: 100%;
  justify-content: space-between;
  align-items: center;
  z-index: 10;
  pointer-events: none; 
}

.box-white-left {
  flex: 1;
  background-color: hsla(0,0%,100%,1);
  height: 100%;
  pointer-events: none;
}

.box-black-left {
  flex: 1;
  background-color: hsla(0,0%,0%,1);
  height: 100%;
  pointer-events: none;
}

.box-transparent-middle {
  background-color: hsla(0,0%,0%,0);
  width: 760px;
  height: 100%;
  margin: 0 auto;
}

.box-white-right {
  flex: 1;
  background-color: hsla(0,0%,100%,1);
  height: 100%;
  pointer-events: none;
}

.box-black-right {
  flex: 1;
  background-color: hsla(0,0%,0%,1);
  height: 100%;
  pointer-events: none;
}

/* overlap boxes END */


h1 {
  margin-top: 40px;
  margin-bottom: 40px;
}

a {
  text-decoration: none;
}

li {
  text-decoration: none;
}


/*==========================================================================================================================*/
/*==========================================================================================================================*/
/*------------------------------------------------- MEDIA QUERIES start ----------------------------------------------------*/
/*==========================================================================================================================*/
/*==========================================================================================================================*/

/* apple iPhones buy page is OK other pages the drawing is smaller than screen by a lot...*/

/* ipads are not OK */

/* TEST .CarouselSize */


/* anything under 320px width */
@media only screen 
  and (min-device-width: 280px)
  and (max-device-width: 319px)
  and (-webkit-min-device-pixel-ratio: 2) {
  .CarouselSize {
    width: 278px;
    height: 120px;
  }
  .hue_rotate {
    width: 278px;
    height: 120px;
  }
  button {
    padding-left: 5px;
    padding-right: 5px;
  }
  button:hover {
    color: hsl(0, 100%, 100%);
    border-bottom: solid, 4px, hsla(0,0%,0%,0);
    box-shadow: 0 4px 0 0 hsla(0,0%,0%,0);
  }
  .navigation-wrapper {
    padding-bottom: 0px;
  }
  .nav_links {
    width: 100%;
    /* font-size: 15px; */
    font-weight: 500;
  }
  .carousel_white {
    margin-top: 56px;
  }
  /* ================================================= carousel white buy ================================================= */
  .carousel_white_buy {
    width: 340px;
    height: 370px;
    margin-top: 50px;
  }
  /* ================================================= carousel white buy ================================================= */
  .carousel_black {
    margin-top: 56px;
  }
  .frame-overlay-dark-grey {
    display: none;
  }
  .frame-overlay-light-grey {
    display: none;
  }
  .frame_overlay_dark_grey_buy {
    border: 3px solid hsl(0, 0%, 20%);
    width: 340px;
    height: 370px;
  }
  .single_image_display_container {
    width: 340px;
    height: 370px;
  }
}

/* smartphones, iPhone, portrait 480x320 phones */
@media (min-width:320px)  {
  .CarouselSize {
    width: 278px;
    height: 120px;
  }
  .hue_rotate {
    width: 278px;
    height: 120px;
  }
  button {
    padding-left: 5px;
    padding-right: 5px;
  }
  button:hover {
    color: hsl(0, 100%, 100%);
    border-bottom: solid, 4px, hsla(0,0%,0%,0);
    box-shadow: 0 4px 0 0 hsla(0,0%,0%,0);
  }
  .navigation-wrapper {
    padding-bottom: 0px;
  }
  .nav_links {
    width: 100%;
    /* font-size: 15px; */
    font-weight: 500;
  }
  .carousel_white {
    margin-top: 56px;
  }
  /* ================================================= carousel white buy ================================================= */
  .carousel_white_buy {
    width: 340px;
    height: 370px;
    margin-top: 50px;
  }
  /* ================================================= carousel white buy ================================================= */
  .carousel_black {
    margin-top: 56px;
  }
  .frame-overlay-dark-grey {
    display: none;
  }
  .frame-overlay-light-grey {
    display: none;
  }
  .frame_overlay_dark_grey_buy {
    border: 3px solid hsl(0, 0%, 20%);
    width: 340px;
    height: 370px;
  }
  .single_image_display_container {
    width: 340px;
    height: 370px;
  }
}
/* ... */

